integ-tests/tests/snapshots/parser__require_newlines__basic.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ basic:1:3
  │
1 │ 0=0r=false
  │   ^^ unable to parse number


